--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h2 id="amountpaid">$0</h2>
             <button class="active" onmouseout="increaseval(document.getElementById('amountpaid'),document.getElementById('amountpaid').innerHTML.replace('$',''),1,'$',0)">+</button>
         </div>
-        <p>Click <a href="email.html" style="text-decoration: none;colour:black;">here</a> to go to the <a style='color:blue;text-decoration: underline' href="#"> next page</a></p>
+        <p>Click <a href="email.html" style="text-decoration: none;colour:black;" id="here">here</a> to go to the <a style='color:blue;text-decoration: underline' href="#"> next page</a></p>
     </body>
     <script src="cursedphone.js"></script>
 </html>
