honestly bro just redo the whole thing lol

--- a/email.html
+++ b/email.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <link rel="stylesheet" href="style.css">
     <head>
         <title>Bank transfer | Page 2</title>
@@ -10,10 +10,13 @@
         <select id="emailcharacters">
         </select>
         <button onclick="addtoemail(document.getElementById('emailcharacters'),document.getElementById('emaildisplay'),true)">Add</button>
-        <h2 id="emaildisplay2">Confirm email:</h2>
+        <h2 id="emaildisplay2">Confirm email: </h2>
         <select id="emailcharacters2">
         </select>
         <button onclick="addtoemail(document.getElementById('emailcharacters2'),document.getElementById('emaildisplay2'),true)">Add</button>
+        <br>
+        <br>
+        <button onclick="submit()">Submit</button>
     </body>
     <script src="cursedphone2.js"></script>
 </html>
